[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hacktron-cull"
version = "0.1.0"
description = "Find compromised npm packages across your infrastructure."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Hacktron" }
]
keywords = ["security", "npm", "scanner", "docker", "github", "gcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

[project.scripts]
cull = "cull:main"

[tool.setuptools]
packages = ["cull"]
