[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hacktron-cull"
version = "0.2.0"
description = "Find compromised packages and suspicious package code."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Hacktron" }
]
keywords = ["security", "npm", "python", "scanner", "docker", "github", "gcp", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]

[project.scripts]
cull = "cull:main"

[tool.setuptools]
packages = ["cull", "cull.check", "cull.llm"]

[tool.setuptools.package-data]
"cull.llm" = ["iocs.json", "pricing.json"]
